src/objects/Deployment__c.object
<CustomObject>
    <fields>
        <fullName>Accept_and_Connect_Button_Delayed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accept and Connect Button Delayed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actual_Go_Live_Date__c</fullName>
        <label>Actual Go-Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Banner_Clickthrough__c</fullName>
        <label>Banner Clickthrough</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Banner_Link__c</fullName>
        <label>Banner Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Banner__c</fullName>
        <label>Banner</label>
        <picklist>
            <picklistValues>
                <fullName>Awaiting From Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received From Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMH in Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMH Received Approval on Developed Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use Existing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Deployments</relationshipLabel>
        <relationshipName>Deployments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Click_Trackers__c</fullName>
        <label>Click Trackers</label>
        <picklist>
            <picklistValues>
                <fullName>Awaiting From Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received From Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use Existing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DeploymentDate__c</fullName>
        <label>Requested Deployment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ExamRoomSpend__c</fullName>
        <label>Exam Room Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fast_Forwarding_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fast Forwarding Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ISI_Link__c</fullName>
        <label>ISI Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ISI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Image_Files__c</fullName>
        <label>Image Files</label>
        <picklist>
            <picklistValues>
                <fullName>Awaiting From Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received From Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMH in Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMH Received Approval on Developed Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Image_Links__c</fullName>
        <label>Image Links</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Impression_Tags__c</fullName>
        <label>Impression Tags</label>
        <picklist>
            <picklistValues>
                <fullName>Awaiting From Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received From Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use Existing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>JSON__c</fullName>
        <label>JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Link1__c</fullName>
        <label>Link 1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link2__c</fullName>
        <label>Link 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_Location__c</fullName>
        <label>Link Location</label>
        <picklist>
            <picklistValues>
                <fullName>Top</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OpportunityOwner__c</fullName>
        <formula>Opportunity__r.Owner.FirstName + &quot; &quot; + Opportunity__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Deployments</relationshipLabel>
        <relationshipName>Deployments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_Live_Date__c</fullName>
        <label>Requested Go-Live Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upcoming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Live</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign Ended</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tagging_Docs__c</fullName>
        <label>Tagging Docs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Party_Tag__c</fullName>
        <label>3rd Party Tag</label>
        <picklist>
            <picklistValues>
                <fullName>Received From Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TotalSpend__c</fullName>
        <label>Total Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Launch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creative Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expansion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Literature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Video_Link__c</fullName>
        <label>Video Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Video__c</fullName>
        <label>Video</label>
        <picklist>
            <picklistValues>
                <fullName>Awaiting From Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received From Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMH in Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMH Received Approval on Developed Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use Existing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WaitingRoomSpend__c</fullName>
        <label>Waiting Room Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WifiLink__c</fullName>
        <label>WiFi Link</label>
        <type>Url</type>
    </fields>
    <label>Deployment</label>
    <nameField>
        <label>Deployment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deployments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>